# glfw_cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  basic.cpp  boing.cpp  wave.cpp  windows.cpp
include/: cursor.ixx  glfw.ixx  joystick.ixx  library.ixx  monitor.ixx  type.ixx  version.ixx  window.ixx
src/: checks.h  cursor.cpp  joystick.cpp  library.cpp  monitor.cpp  version.cpp  window.cpp
